--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   json_annotation: ^2.2.0
   bot_toast: ^2.2.1
+  flutter_colorpicker: any
+  
 
 
 dev_dependencies:
@@ -27,3 +29,4 @@ dev_dependencies:
   build_runner: ^1.0.0
 flutter:
   uses-material-design: true
+  
