--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   json_annotation: ^2.2.0
   bot_toast: ^2.2.1
   flutter_colorpicker: any
+  url_launcher: ^5.4.1
 
   flutter_localizations:
     sdk: flutter
