--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   bot_toast: ^2.2.1
   flutter_colorpicker: any
   url_launcher: ^5.4.1
+  universal_html: ^1.2.2
 
   flutter_localizations:
     sdk: flutter
