--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^0.6.7
   image_picker_for_web: ^0.1.0
   video_player: ^0.10.5
+  quiver: ^2.1.3
 
 
 dev_dependencies:
