--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cry: ^0.1.3
   dio: 3.0.7
   cupertino_icons: ^0.1.2
   charts_flutter: ^0.8.0
   flutter_custom_clippers: ^1.1.0
-  cached_network_image: ^2.0.0-rc
   font_awesome_flutter: ^8.5.0
   json_annotation: ^2.2.0
   bot_toast: ^3.0.5
@@ -29,7 +29,7 @@ dependencies:
   image_picker_for_web: ^0.1.0
   video_player: ^0.10.5
   quiver: ^2.1.3
-  cry: ^0.1.2
+  global_configuration: ^1.6.0
 
 
 dev_dependencies:
