--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cry: ^0.1.3
+  cry: ^0.1.4
   dio: 3.0.7
   cupertino_icons: ^0.1.2
   charts_flutter: ^0.8.0
@@ -41,5 +41,7 @@ dev_dependencies:
   build_runner: ^1.0.0
 flutter:
   uses-material-design: true
+  assets:
+    - config/
 flutter_intl:
   enabled: true
