升级cry0.1.5，增加菜单模式的设置，迁回cryRoot和configuration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cry: ^0.1.4
+  cry: 0.1.5
   dio: 3.0.7
   cupertino_icons: ^0.1.2
   charts_flutter: ^0.8.0
