默认语言改为系统的语言 升级cry0.1.10

--- a/config/application.json
+++ b/config/application.json
@@ -1,5 +1,5 @@
 {
-  "baseUrl": "https://www.cairuoyu.com/api/p4/",
+  "baseUrl": "http://www.cairuoyu.com/api/p4/",
   "baseUrl2": "http://localhost:9094/",
   "connectTimeout": 10000,
   "receiveTimeout": 3000
