--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   video_player: ^0.10.5
   quiver: ^2.1.3
   global_configuration: ^1.6.0
+  file_picker: ^2.1.4
 
 
 dev_dependencies:
