--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   quiver: ^2.1.3
   global_configuration: ^1.6.0
   file_picker: ^2.1.4
+  animations: ^1.1.2
 
 
 dev_dependencies:
