fix:android build错误

--- a/config/application.json
+++ b/config/application.json
@@ -1,6 +1,7 @@
 {
   "baseUrl": "http://www.cairuoyu.com/api/p4/",
-  "baseUrl2": "http://localhost:9094/",
+  "baseUrlA": "https://www.cairuoyu.com/api/p4/",
+  "baseUrlL": "http://localhost:9094/",
   "connectTimeout": 10000,
   "receiveTimeout": 3000
 }
