--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   global_configuration: ^1.6.0
   file_picker: ^2.1.4
   animations: ^1.1.2
+  flutter_simple_treeview: ^2.0.2
 
 
 dev_dependencies:
