--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   file_picker: ^2.1.4
   animations: ^1.1.2
   flutter_simple_treeview: ^2.0.2
-  get:
+  get: ^3.24.0
+  get_storage: ^1.4.0
 
 
 dev_dependencies:
