--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_simple_treeview: ^2.0.2
   get: ^3.24.0
   get_storage: ^1.4.0
+  syncfusion_flutter_charts: ^18.4.43+1
 
 
 dev_dependencies:
