--- a/config/application.json
+++ b/config/application.json
@@ -1,7 +1,7 @@
 {
   "baseUrl": "http://www.cairuoyu.com/api/p4/",
-  "baseUrlA": "https://www.cairuoyu.com/api/p4/",
-  "baseUrlL": "http://localhost:9094/",
+  "baseUrlMobile": "https://www.cairuoyu.com/api/p4/",
+  "baseUrlLocalhost": "http://localhost:9094/",
   "connectTimeout": 10000,
   "receiveTimeout": 3000
 }
