--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cry: 0.2.5
+  dio: ^3.0.7
   cupertino_icons: ^0.1.2
   charts_flutter: ^0.9.0
   flutter_custom_clippers: ^1.1.0
