增加字体切换功能，修改了默认字体以修复刚加载时中文乱码问题

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,19 @@ flutter:
   uses-material-design: true
   assets:
     - config/
+  fonts:
+    - family: rockSalt
+      fonts:
+        - asset: assets/fonts/RockSalt-Regular.ttf
+    - family: bradhitc
+      fonts:
+        - asset: assets/fonts/BRADHITC.TTF
+    - family: agencry
+      fonts:
+        - asset: assets/fonts/AGENCYR.TTF
+    - family: fzytk
+      fonts:
+        - asset: assets/fonts/FZYTK.TTF
 
 flutter_intl:
   enabled: true
