--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cry: 0.2.5
+  cry: 0.2.6
   dio: ^3.0.7
   cupertino_icons: ^0.1.2
   charts_flutter: ^0.9.0
@@ -43,7 +43,7 @@ dev_dependencies:
   build_runner: ^1.0.0
 
 dependency_overrides:
-  intl: 0.17.0-nullsafety.2
+  intl: 0.17.0
 
 flutter:
   uses-material-design: true
