--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,30 +11,30 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cry: 0.2.10
-  dio: ^3.0.7
-  cupertino_icons: ^0.1.2
+  cry: 1.0.0
+  dio: ^4.0.0-prev3
+  cupertino_icons: ^1.0.2
   charts_flutter: ^0.9.0
   flutter_custom_clippers: ^1.1.0
-  font_awesome_flutter: ^8.5.0
-  bot_toast: ^3.0.5
-  flutter_colorpicker: any
-  url_launcher: ^5.4.1
-  universal_html: ^1.2.2
-  mime_type: ^0.3.1
-  image_picker: ^0.6.7
-  image_picker_for_web: ^0.1.0
-  video_player: ^0.10.5
-  quiver: ^2.1.3
-  global_configuration: ^1.6.0
-  file_picker: ^2.1.4
-  animations: ^1.1.2
-  flutter_simple_treeview: ^2.0.2
-  get: ^3.24.0
-  get_storage: ^1.4.0
+  font_awesome_flutter: ^9.0.0
+  bot_toast: ^4.0.1
+  flutter_colorpicker: ^0.4.0
+  url_launcher: ^6.0.3
+  universal_html: ^2.0.7
+  mime_type: ^1.0.0
+  image_picker: ^0.7.3
+  image_picker_for_web: ^2.0.0
+  video_player: ^2.1.0
+  quiver: ^3.0.0
+  global_configuration: ^2.0.0-nullsafety.0
+  file_picker: ^3.0.0
+  animations: ^2.0.0
+  flutter_simple_treeview: ^3.0.0-nullsafety.1
+  get: ^4.0.0-nullsafety.2
+  get_storage: ^2.0.1
   syncfusion_flutter_charts: ^18.4.43+1
   syncfusion_flutter_datagrid: ^18.4.30-beta
-  flutter_markdown: ^0.6.0
+  flutter_markdown: ^0.6.1
 
 
 dev_dependencies:
