--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cry: 1.0.4
-  dio: ^4.0.0-prev3
+  cry: 1.0.5
+  dio: ^4.0.0
   cupertino_icons: ^1.0.2
   charts_flutter: ^0.9.0
   flutter_custom_clippers: ^1.1.0
