--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   syncfusion_flutter_charts: ^18.4.43+1
   syncfusion_flutter_datagrid: ^18.4.30-beta
   flutter_markdown: ^0.6.1
+  fluttertoast: ^8.0.3
 
 
 dev_dependencies:
