--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ flutter:
     - family: Roboto
       fonts:
         - asset: assets/fonts/Roboto-Black.ttf
+#    - family: Roboto
+#      fonts:
+#        - asset: assets/fonts/STXINWEI.woff2
+#    - family: NotoSans
+#      fonts:
+#        - asset: assets/fonts/STXINGKA.woff2
     - family: RockSalt
       fonts:
         - asset: assets/fonts/RockSalt-Regular.ttf
