增加菜单：系统设置-基本设置 https://github.com/cairuoyu/flutter_admin 注释中文字体 https://github.com/cairuoyu/flutter_admin

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,12 @@ flutter:
   assets:
     - config/
   fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/STXINWEI.woff2
-    - family: NotoSans
-      fonts:
-        - asset: assets/fonts/STXINGKA.woff2
+#    - family: Roboto
+#      fonts:
+#        - asset: assets/fonts/STXINWEI.woff2
+#    - family: NotoSans
+#      fonts:
+#        - asset: assets/fonts/STXINGKA.woff2
     - family: RockSalt
       fonts:
         - asset: assets/fonts/RockSalt-Regular.ttf
