系统右上角工具栏：源码、反馈、关于、隐私 https://github.com/cairuoyu/flutter_admin

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
   uses-material-design: true
   assets:
     - config/
+    - assets/PRIVACY
   fonts:
 #    - family: Roboto
 #      fonts:
