可根据环境指定不同的配置

--- a/config/application.yaml
+++ b/config/application.yaml
@@ -1,7 +1,9 @@
 cry:
+  profiles:
+    active: test
   api:
-    baseUrl: http://www.cairuoyu.com/api/p4/
+    baseUrl: ${api.baseUrl}
     connectTimeout: 10000
     receiveTimeout: 3000
   logger:
-    level: error
+    level: ${logger.level}
