--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cry: 1.2.0
+  cry: 1.2.1
   font_awesome_flutter: ^9.0.0
   flutter_colorpicker: ^1.0.3
   url_launcher: ^6.0.3
@@ -30,6 +30,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/mobilefacenet.tflite
     - config/
     - PRIVACY
   fonts:
