指定默认的 Roboto 和 NoteSans 字体 https://github.com/cairuoyu/flutter_admin

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,12 @@ flutter:
     - config/
     - PRIVACY
   fonts:
-#    - family: Roboto
-#      fonts:
-#        - asset: assets/fonts/STXINWEI.woff2
-#    - family: NotoSans
-#      fonts:
-#        - asset: assets/fonts/STXINGKA.woff2
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/STXINWEI.woff2
+    - family: NotoSans
+      fonts:
+        - asset: assets/fonts/STXINGKA.woff2
     - family: RockSalt
       fonts:
         - asset: assets/fonts/RockSalt-Regular.ttf
