升级Flutter Sdk版本到3.7.7 https://github.com/cairuoyu/flutter_admin 修复打包apk报错 https://github.com/cairuoyu/flutter_admin 不配置默认字体 https://github.com/cairuoyu/flutter_admin

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,13 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+
+
     compileSdkVersion flutter.compileSdkVersion
 
     compileOptions {
