修复版本冲突 https://github.com/cairuoyu/flutter_admin

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dev_dependencies:
     sdk: flutter
 
 dependency_overrides:
-  collection: 1.16.0
+  intl: any
 
 flutter:
   uses-material-design: true
